--- a/index.html
+++ b/index.html
@@ -32,7 +32,34 @@
       <img src="images/hardy.png" alt="">
      </div>
   </header>
-  <main></main>
+  <main>
+    <section class="about">
+      <section class="section-title">About Me</section>
+      <section class="section-description">
+        <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that
+        provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me.
+        Delivering work within time and budget which meets clients requirements in our mata.</p>
+        <div class="about-info-container">
+          <div class="about-info">
+            <h4 class="info-tile">Name:</h4>
+            <p class="info-description">Marry Hardy</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-tile">Email:</h4>
+            <p class="info-description">info@gmail.com</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-tile">Date of birth:</h4>
+            <p class="info-description">13 February, 2001</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-tile">From:</h4>
+            <p class="info-description">Los Angelo, USA</p>
+          </div>
+        </div>
+      </section>
+    </section>
+  </main>
   <footer></footer>
 </body>
 </html>
