--- a/index.html
+++ b/index.html
@@ -59,6 +59,44 @@
         </div>
       </section>
     </section>
+
+    <!-- What i do section -->
+    <section>
+      <section class="section-title">What I do</section>
+      <section id="what-i-do-description" class="section-description">
+        <p>I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my
+        main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume
+        and project portfolio.</p>
+      </section>
+    </section>
+
+    <div class="skill-container">
+      <div class="skill">
+        <img src="images/icons/js.png" alt="">
+        <h3 class="skill-title">Vanila Javascript</h3>
+        <p class="sill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.
+        Aenean commodo ligula eget dolor.</p>
+      </div>
+      <div class="skill">
+        <img src="images/icons/react.png" alt="">
+        <h3 class="skill-title">React</h3>
+        <p class="sill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.
+        Aenean commodo ligula eget dolor.</p>
+      </div>
+      <div class="skill">
+        <img src="images/icons/nodejs.png" alt="">
+        <h3 class="skill-title">Node.js</h3>
+        <p class="sill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.
+        Aenean commodo ligula eget dolor.</p>
+      </div>
+      <div class="skill">
+        <img src="images/icons/mongo.png" alt="">
+        <h3 class="skill-title">MongoDB</h3>
+        <p class="sill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.
+        Aenean commodo ligula eget dolor.</p>
+      </div>
+    </div>
+
   </main>
   <footer></footer>
 </body>
