added download button on bottom

--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
 
     </section>
 
+    <section class="download-btn">
+      <button class="btn-primary">Download CV</button>
+    </section>
+
   </main>
   <footer></footer>
 </body>
